# env-vault

./: .gitignore  AGENTS.md  CLAUDE.md  ddl.sql  docker-compose.yml  erd.mmd
backend/: Dockerfile  README.md  init-db.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 177077e10656_restore_cascade_delete_on_secret_.py  412ab868f224_initial_schema.py  b7981284763f_add_deleted_at_to_secrets.py  c3f8a91d2e47_add_create_organization_with_owner.py  d4a1b72e9c08_safe_uuid_casting_for_rls_guc_settings.py
backend/app/core/: config.py  database.py  uow.py
backend/app/core/security/kms/: __init__.py  interface.py  local.py
backend/app/models/: __init__.py  audit.py  base.py  enums.py  organization.py  project.py  secret.py  user.py
backend/app/repositories/: __init__.py  base.py  project.py  secret.py  user.py
backend/app/schemas/: __init__.py  auth.py  user.py
backend/app/services/: __init__.py  crypto.py  secret.py
backend/scripts/: provision_app_role.sh
backend/tests/: conftest.py  factories.py
backend/tests/integration/: test_secret_service.py  test_uow_and_rls.py
backend/tests/unit/: test_crypto_service.py  test_local_kms.py
